# zink

./: AGENTS.md  Cargo.toml
app/: README.md
app/dto/: Cargo.toml
app/dto/src/: lib.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/ui/: Cargo.toml  build.sh
app/ui/src/: image.rs  invoke.rs  lib.rs
crates/zink-cli/: Cargo.toml
crates/zink-cli/src/: main.rs  state.rs
crates/zink-cli/tests/: avatar.rs  contacts.rs  fanout.rs  groups.rs  history.rs  images.rs  live.rs  multi_device.rs  outbox.rs  threading.rs  walking_skeleton.rs  who_is.rs
crates/zink-cli/tests/common/: mod.rs
crates/zink-client/: Cargo.toml
crates/zink-client/src/: blobs.rs  client.rs  error.rs  hex.rs  keystore.rs  lib.rs  net.rs  spike.rs  state.rs  sync.rs
crates/zink-protocol/: Cargo.toml
crates/zink-protocol/src/: attestation.rs  codec.rs  contact_record.rs  crypto.rs  dag.rs  fanout.rs  keys.rs  lib.rs  mailbox.rs  message.rs  sync.rs  testutil.rs
crates/zink-relay/: Cargo.toml  build.rs
crates/zink-relay/examples/: browser_spike.rs
crates/zink-relay/src/: blobs.rs  clock.rs  fs.rs  lib.rs  mailbox.rs  main.rs  net.rs  store.rs  testutil.rs
crates/zink-relay/tests/: blobs.rs  mailbox.rs
deploy/: zink-relay.service
docs/: DESIGN-PHILOSOPHY.md  DEV-SETUP.md  SPEC.md  STYLE.md
docs/design/: client-core.md  dag-store.md  direct-delivery.md  groups.md  live-delivery.md  mailbox-rendezvous-push.md  mailbox-wire-protocol.md  multi-device.md  mvp-build-plan.md  sync-primitives.md  ui-facelift.md  web-of-trust.md  who-is-this.md
web/spike/: build.sh  index.html
web/spike/pkg/: zink_client.js
