[workspace]
resolver = "3"
members = [
    "crates/zink-protocol",
    "crates/zink-relay",
    "crates/zink-cli",
    "crates/zink-client",
]
# The Tauri app builds standalone: its *desktop* target needs system
# webkit2gtk libs that headless build machines lack, and Android builds go
# through `cargo tauri android`, not the workspace. The UI is wasm32-only
# (built by app/ui/build.sh); the dto crate rides along with both.
exclude = ["app/src-tauri", "app/ui", "app/dto"]

[workspace.package]
version = "0.1.0"
edition = "2024"
