[package]
name = "zink-app"
version = "0.1.0"
edition = "2024"

# Standalone crate (excluded from the workspace): desktop builds need system
# webkit2gtk, and Android builds run through `cargo tauri android`.

[lib]
name = "zink_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# base64 for image bytes over the JSON IPC; already in the tree (zink-protocol
# uses it for QR base32) — no new dependency, just a direct edge.
data-encoding = "2"
iroh = "1.0.2"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-barcode-scanner = "2.4.5"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zink-app-dto = { path = "../dto" }
zink-client = { version = "0.1.0", path = "../../crates/zink-client" }
zink-protocol = { path = "../../crates/zink-protocol" }

# Debug APKs carry the native lib; without this it's ~350 MB of debuginfo.
# Android debugging happens via logcat, not a native debugger.
[profile.dev]
debug = false
strip = "debuginfo"

[profile.release]
opt-level = "s"     # optimize for size; "z" shaves a bit more at some speed cost
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
