[package]
name = "zink-ui"
version = "0.1.0"
edition = "2024"

# Standalone crate (outside the workspace, like the rest of app/): compiles
# to WASM only, for the Tauri webview. Built by app/ui/build.sh into
# app/dist/pkg/ — the same wasm-bindgen flow as web/spike (no extra tools).

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
zink-app-dto = { path = "../dto" }

[profile.release]
opt-level = "s"
lto = "thin"
