[package]
name = "zink-cli"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1.8.5"
iroh = "1.0.2"
iroh-blobs = "0.103"
n0-future = "0.3.2"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zink-protocol = { path = "../zink-protocol" }

[dev-dependencies]
zink-relay = { path = "../zink-relay" }
