[package]
name = "zink-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zink-client = { path = "../zink-client" }
zink-protocol = { path = "../zink-protocol" }

[dev-dependencies]
iroh = "1.0.2"
iroh-blobs = "0.103"
zink-relay = { path = "../zink-relay" }
