[package]
name = "zink-cli"
version.workspace = true
edition.workspace = true

[dependencies]
qrcode = { version = "0.14.1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zink-client = { path = "../zink-client" }
zink-protocol = { path = "../zink-protocol" }

[dev-dependencies]
iroh = "1.0.2"
iroh-blobs = "0.103"
zink-relay = { path = "../zink-relay" }
