[package]
name = "zink-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iroh = { version = "1.0.2", default-features = false, features = ["tls-ring"] }
tracing = "0.1.44"
zink-protocol = { path = "../zink-protocol" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
blake3 = "1"
iroh-blobs = "0.103"
n0-future = "0.3.2"
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
