[package]
name = "zink-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iroh = { version = "1.0.2", default-features = false, features = ["tls-ring"] }
# Error-enum derive (De1) — derive-only, no runtime deps, wasm-clean.
thiserror = "2"
tracing = "0.1.44"
zink-protocol = { path = "../zink-protocol" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
blake3 = "1"
iroh-blobs = "0.103"
n0-future = "0.3.2"
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
# A runtime for the async peer-sync tests (iroh's router needs tokio).
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# In-process iroh relay servers for the D0b by-key connectivity e2e.
iroh-relay = { version = "1.0.2", features = ["server"] }
