[package]
name = "zink-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1"
borsh = { version = "1", features = ["derive"] }
chacha20poly1305 = { version = "0.11.0", default-features = false, features = ["alloc"] }
crypto_box = { version = "0.9.1", default-features = false, features = ["alloc", "seal", "salsa20", "rand_core"] }
data-encoding = { version = "2.11.0", default-features = false, features = ["alloc"] }
ed25519-dalek = "2"
rand_core = "0.6"
zeroize = { version = "1.9.0", default-features = false, features = ["alloc"] }
