[package]
name = "zink-relay"
version.workspace = true
edition.workspace = true

[dependencies]
iroh = "1.0.2"
iroh-blobs = "0.103"
n0-future = "0.3.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zink-protocol = { version = "0.1.0", path = "../zink-protocol" }

[dev-dependencies]
iroh-relay = { version = "1.0.2", features = ["server"] }
n0-future = "0.3.2"
